<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamindecisive.calcurmath.GraphSettings" >

    <ScrollView
        android:id="@+id/scrollAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"        
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/functionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/functionstitle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F1_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F1_Edit"
                        style="@style/functionEdit"
                        android:text="@string/sinfunction" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F2_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f2"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F2_Edit"
                        style="@style/functionEdit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F3_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f3"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F3_Edit"
                        style="@style/functionEdit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F4_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f4"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F4_Edit"
                        style="@style/functionEdit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F5_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f5"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F5_Edit"
                        style="@style/functionEdit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/F6_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f6"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/F6_Edit"
                        style="@style/functionEdit" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/axisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/axistitle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/xMin_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/xmin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/xMin_Edit"
                        style="@style/functionEdit"
                        android:text="@string/xminvalue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/xMax_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/xmax"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/xMax_Edit"
                        style="@style/functionEdit"
                        android:text="@string/xmaxvalue" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/yMin_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ymin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/yMin_Edit"
                        style="@style/functionEdit"
                        android:text="@string/yminvalue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/yMax_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ymax"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/yMax_Edit"
                        style="@style/functionEdit"
                        android:text="@string/ymaxvalue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/xScl_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/xscl"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/xScl_Edit"
                        style="@style/functionEdit"
                        android:text="@string/xsclvalue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/yScl_Text"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yscl"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/yScl_Edit"
                        style="@style/functionEdit"
                        android:text="@string/ysclvalue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/graphButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toGraph"
                        android:textSize="35sp" />
                    
                    <Button
                        android:id="@+id/resetButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:textSize="35sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>